# s-controller-test

./: .gitignore  Cargo.toml  README.md
libs/base-client/: Cargo.toml
libs/base-client/src/: client.rs
libs/flat-fee-client/: Cargo.toml
libs/flat-fee-client/src/client/: client.rs  initialize.rs  mod.rs
libs/lido-calculator-client/: Cargo.toml
libs/lido-calculator-client/src/client/: client.rs  init.rs  lst_to_sol.rs  set_manager.rs  sol_to_lst.rs  update_last_upgrade_slot.rs
libs/marinade-calculator-client/: Cargo.toml
libs/marinade-calculator-client/src/client/: client.rs  init.rs  lst_to_sol.rs  mod.rs  set_manager.rs  sol_to_lst.rs  update_last_upgrade_slot.rs
libs/moose-utils/: Cargo.toml
libs/moose-utils/src/: lib.rs  paths.rs  sorted_signers.rs
libs/s-controller-client/: Cargo.toml
libs/s-controller-client/src/client/: add_disable_pool_authority.rs  add_liquidity.rs  add_lst.rs  add_remove_disable_pool_authority.rs  add_remove_liquidity.rs  add_remove_lst.rs  client.rs  disable_enable_lst_input.rs  disable_enable_pool.rs  initialize.rs  mod.rs  set_admin.rs  set_pricing_program.rs  set_protocol_fee.rs  set_protocol_fee_beneficiary.rs  set_rebalance_authority.rs  set_sol_value_calculator.rs
libs/s-controller-client/src/utils/: mod.rs
libs/spl-calculator-client/: Cargo.toml
libs/spl-calculator-client/src/client/: client.rs  init.rs  lst_to_sol.rs  set_manager.rs  sol_to_lst.rs  update_last_upgrade_slot.rs
scripts/: gen-token-account.sh  gen-token-config.sh  mint-token.sh  start-for-mint.sh  start-local.sh
tester/: Cargo.toml
tester/src/: lib.rs  main.rs
tester/src/helper/: decode_u64_from_return_data.rs  mod.rs  print_keys.rs
tester/src/helper/instructions/: mod.rs  s_controller.rs
tester/src/helper/instructions/flat_fee/: create_ata.rs  create_mint.rs  flat_fee.rs  mod.rs
tester/src/helper/instructions/lido_calculator/: lido_calculator.rs  mod.rs
tester/src/helper/instructions/marinade_calculator/: marinade_calculator.rs  mod.rs
tester/src/helper/instructions/s_controller/: create_ata.rs  create_mint.rs  mod.rs  s_controller.rs
tester/src/helper/instructions/spl_calculator/: mod.rs  spl_calculator.rs
tester/src/test_utils/: mod.rs  new_flat_fee_client.rs  new_lido_calculator_client.rs  new_marinade_calculator_client.rs  new_s_controller_client_for_user1.rs  new_spl_calculator_client.rs  start_test_validator.rs
tester/src/utils/: paths.rs
tester/tests/: mod.rs
tester/tests/integrations/: add_remove_disable_pool_authority.rs  add_remove_lst.rs  disable_enable_lst_input.rs  disable_enable_pool.rs  initialize.rs  mod.rs  set_admin.rs  set_pricing_program.rs  set_protocol_fee.rs  set_protocol_fee_beneficiary.rs  set_rebalance_authority.rs  set_sol_value_calculator.rs
tester/tests/integrations/flat_fee/: initialize.rs  mod.rs
tester/tests/integrations/lido_calculator/: init.rs  lst_to_sol.rs  mod.rs  set_manager.rs  sol_to_lst.rs  update_last_upgrade_slot.rs
tester/tests/integrations/marinade_calculator/: calculator_state.rs  init.rs  lst_to_sol.rs  mod.rs  set_manager.rs  sol_to_lst.rs  update_last_upgrade_slot.rs
tester/tests/integrations/s_controller/: add_remove_disable_pool_authority.rs  add_remove_liquidity.rs  add_remove_lst.rs  disable_enable_lst_input.rs  disable_enable_pool.rs  initialize.rs  mod.rs  set_admin.rs  set_pricing_program.rs  set_protocol_fee.rs  set_protocol_fee_beneficiary.rs  set_rebalance_authority.rs  set_sol_value_calculator.rs
tester/tests/integrations/spl_calculator/: init.rs  lst_to_sol.rs  mod.rs  set_manager.rs  sol_to_lst.rs  update_last_upgrade_slot.rs
tester/tests/test_utils/: mod.rs  new_flat_fee_client.rs  new_lido_calculator_client.rs  new_marinade_calculator_client.rs  new_s_controller.rs  new_s_controller_client.rs  new_s_controller_client_for_user1.rs  new_spl_calculator_client.rs  start_test_validator.rs  test_validator.rs
