[workspace]
resolver = "2"
members = ["libs/moose-utils", "libs/s-controller-client", "libs/flat-fee-client", "tester"]

[workspace.dependencies]
solana-client = "2.2.1"
solana-program = "2.2.1"
solana-sdk = "2.2.1"
solana-signature = "2.2.1"

solana-readonly-account = "^1.1"
spl-token = ">=0.1.0"
spl-associated-token-account = ">=0.1.0"

async-trait = ">=0.1"
borsh = ">=1.0"
bytemuck = "^1"
cargo_metadata = "0.19.1"
tokio = "^1"

moose-utils = { path = "./libs/moose-utils" }
s-controller-client = { path = "./libs/s-controller-client" }
flat-fee-client = { path = "./libs/flat-fee-client" }

s-controller-lib = { git = "https://github.com/moose-labs/S", branch = "custom_address", features = [
    "testing",
] }
s_controller_interface = { git = "https://github.com/moose-labs/S", branch = "custom_address" }
flat-fee-lib = { git = "https://github.com/moose-labs/S", branch = "custom_address", features = [
    "testing",
] }
flat_fee_interface = { git = "https://github.com/moose-labs/S", branch = "custom_address" }

lido-calculator-lib = { git = "https://github.com/igneous-labs/S" }
spl-calculator-lib = { git = "https://github.com/igneous-labs/S" }
marinade-calculator-lib = { git = "https://github.com/igneous-labs/S" }
wsol-calculator-lib = { git = "https://github.com/igneous-labs/S" }
generic-pool-calculator-lib = { git = "https://github.com/igneous-labs/S" }
lido-keys = { git = "https://github.com/igneous-labs/S" }
marinade-keys = { git = "https://github.com/igneous-labs/S" }
sanctum-spl-multi-stake-pool-keys = { git = "https://github.com/igneous-labs/S" }
spl-stake-pool-keys = { git = "https://github.com/igneous-labs/S" }
wsol-keys = { git = "https://github.com/igneous-labs/S" }
sanctum-spl-stake-pool-keys = { git = "https://github.com/igneous-labs/S" }
