[package]
name = "tester"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }

s-controller-lib = { workspace = true, features = ["testing"] }
s_controller_interface = { workspace = true }
flat-fee-lib = { workspace = true, features = ["testing"] }
flat_fee_interface = { workspace = true }

lido-calculator-lib = { workspace = true }
spl-calculator-lib = { workspace = true }
marinade-calculator-lib = { workspace = true }
wsol-calculator-lib = { workspace = true }
generic-pool-calculator-lib = { workspace = true }
lido-keys = { workspace = true }
marinade-keys = { workspace = true }
spl-stake-pool-keys = { workspace = true }
wsol-keys = { workspace = true }
sanctum-spl-stake-pool-keys = { workspace = true }
sanctum-spl-multi-stake-pool-keys = { workspace = true }
