[package]
name = "tester"
version = "0.1.0"
edition = "2021"

[dependencies]
moose-utils = { workspace = true }
base-client = { workspace = true }
s-controller-client = { workspace = true, features = ["testing"] }
flat-fee-client = { workspace = true, features = ["testing"] }
marinade-calculator-client = { workspace = true, features = ["testing"] }
lido-calculator-client = { workspace = true, features = ["testing"] }
spl-calculator-client = { workspace = true, features = ["testing"] }

solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }

spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }

async-trait = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }

s-controller-lib = { workspace = true, features = ["testing"] }
s_controller_interface = { workspace = true }
flat-fee-lib = { workspace = true, features = ["testing"] }
flat_fee_interface = { workspace = true }

lido-calculator-lib = { workspace = true, features = ["testing"] }
lido_calculator_interface = { workspace = true }
spl-calculator-lib = { workspace = true, features = ["testing"] }
spl_calculator_interface = { workspace = true }
marinade-calculator-lib = { workspace = true, features = ["testing"] }
wsol-calculator-lib = { workspace = true }
generic-pool-calculator-lib = { workspace = true }
lido-keys = { workspace = true }
marinade-keys = { workspace = true }
spl-stake-pool-keys = { workspace = true }
wsol-keys = { workspace = true }
sanctum-spl-stake-pool-keys = { workspace = true }
sanctum-spl-multi-stake-pool-keys = { workspace = true }

[dev-dependencies]
serial_test = "3.2.0"
