[package]
name = "marinade-calculator-client"
version = "0.1.0"
edition = "2021"

[features]
testing = ["marinade-calculator-lib/testing"]

[lib]
crate-type = ["lib"]
name = "marinade_calculator_client"

[dependencies]
moose-utils = { workspace = true }

tokio = { workspace = true }
borsh = { workspace = true }

solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-signature = { workspace = true }
solana-readonly-account = { workspace = true, features = ["solana-sdk"] }
spl-associated-token-account = { workspace = true }

marinade-calculator-lib = { workspace = true }
marinade-keys = { workspace = true }
generic_pool_calculator_interface = { workspace = true }
